--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -245,12 +245,15 @@ h1 {
     align-items: center;
     padding-top: 8px;
     gap: 8px;
+    max-height: 100px;
+    overflow-y: auto;
 }
 
 #subtask_content p {
     width: 80%;
     margin: 0;
     display: flex;
+    justify-content: space-between;
     cursor: pointer;
     padding: 4px;
     border-radius: 8px;
@@ -258,9 +261,92 @@ h1 {
 
 #subtask_content p span {
     display: flex;
+    align-items: center;
     gap: 8px;
 }
 
 #subtask_content p:hover {
     background-color: lightgray;
+}
+
+.subtask_icon {
+    display: none;
+    width: 20px;
+    transition: scale 80ms ease-in-out;
+}
+
+.subtask_icon:hover {
+    scale: 1.1;
+}
+
+#subtask_content p:hover .subtask_icon {
+    display: flex;
+}
+
+.mobile_sidebar_container {
+    display: none;
+    width: 100%;
+    height: 90px;
+    min-height: 90px;
+}
+
+@media(max-width: 1350px) {
+    .form_content {
+        flex-direction: column;
+    }
+}
+
+@media(max-width: 1000px) {
+    .side_bar_container {
+        min-width: 0;
+        width: 0;
+    }
+
+    .mobile_sidebar_container {
+        display: block;
+    }
+
+    #clear_button {
+        display: none;
+    }
+}
+
+@media(max-width: 600px) {
+
+    .add_task_content {
+        padding: 0;
+    }
+
+    .input {
+        width: 100%;
+        padding: 8px 2px;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    .main_content {
+        padding: 0px 8px;
+    }
+}
+
+@media(max-width: 490px) {
+    .prio_category_span h2 {
+        font-size: 16px;
+    }
+}
+
+@media(max-width: 400px) {
+    .prio_category_span h2 {
+        font-size: 8px;
+    }
+
+    .prio_category h2 {
+        gap: 4px;
+    }
+
+    .select {
+        padding: 12px 8px;
+    }
 }
