--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -36,8 +36,27 @@ body {
   gap: 35px;
 }
 
-.sign_up_container img:hover {
+.sign_up_container_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 110px;
+  height: 48px;
+  padding: 15px, 24px, 15px, 24px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  color: var(--card_color);
+  background-color: var(--main_color);
+  font-size: 21px;
+  font-weight: 700;
+  border: solid 1px var(--main_color);
+}
+
+.sign_up_container_btn:hover {
   cursor: pointer;
+  border: var(--lightblue_font);
+  background-color: var(--lightblue_font);
+  box-shadow: -1px 5px 5px 0px #c2c2c2;
 }
 
 /********** MAIN **********/
@@ -109,6 +128,10 @@ body {
   border: none;
 }
 
+.login_input input::placeholder {
+  transform: translateY(5px);
+}
+
 .login_input input:hover,
 .login_input button:hover {
   cursor: pointer;
@@ -133,12 +156,45 @@ body {
   border: none;
 }
 
+.false_password {
+  width: 422px;
+  height: 24px;
+  margin-top: 8px;
+  color: red;
+  font-size: 12px;
+  opacity: 50%;
+}
+
 .login_check {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8px;
   margin-left: 70px; /* links oder rechtsbündig? */
 }
+
+.login_check img {
+  transform: translateY(-2px);
+}
+
+/* input[type="checkbox"] {
+  outline: none;
+  border: none;
+}
+
+input[type="checkbox"] {
+  box-shadow: 1px -1px 1px rgba(0, 0, 0, 1);
+}
+
+input[type="checkbox"]:hover {
+  box-shadow: -1px 1px 1px rgba(0, 0, 0, 1);
+}
+
+.login_check input:hover {
+  cursor: pointer;
+} */
+
+
 
 .login_card_foot {
   display: flex;
@@ -148,12 +204,16 @@ body {
 }
 
 .foot_login_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 110px;
   height: 48px;
   padding: 15px, 24px, 15px, 24px;
   border-radius: 8px;
   font-size: 21px;
   font-weight: 700;
+  box-sizing: border-box;
   background-color: var(--main_color);
   color: var(--card_color);
 }
@@ -163,15 +223,21 @@ body {
   background-color: var(--lightblue_font);
   border-color: var(--lightblue_font);
   box-shadow: none;
+  box-shadow: -1px 5px 5px 0px #c2c2c2;
 }
 
 .foot_guestlog_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 177px;
   height: 48px;
   padding: 15px, 24px, 15px, 24px;
   border-radius: 8px;
   font-size: 21px;
   font-weight: 700;
+  box-sizing: border-box;
+  border: 1px solid var(--main_color);
   background-color: var(--card_color);
   color: var(--main_color);
 }
@@ -181,6 +247,7 @@ body {
   color: var(--lightblue_font);
   border-color: var(--lightblue_font);
   box-shadow: none;
+  box-shadow: -1px 5px 5px 0px #c2c2c2;
 }
 
 /********** FOOTER **********/
@@ -190,9 +257,20 @@ body {
   justify-content: center;
   margin-top: 120px;
   gap: 16px;
+  box-sizing: border-box;
 }
 
 .login_page_bottom a {
+  text-align: center;
   text-decoration: none;
   color: var(--lightgray_font);
+  box-sizing: border-box;
+  width: 120px;
 }
+
+.login_page_bottom a:hover {
+  color: var(--lightblue_font);
+  font-weight: bold;
+}
+
+
