--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 :root {
-    --main_color: #2a3647;
-    --main_color_lighter: #354458;
-    --main_color_dark: #091931;
-    --background_main: #f6f7f8;
-    --lightgray_font: #c0c0c0;
-    --lightblue_font: #29abe2;
-    --main_font: "Inter", sans-serif;
-    --backup_font: system-ui, sans-serif;
-  }
+  --main_color: #2a3647;
+  --main_color_lighter: #354458;
+  --main_color_dark: #091931;
+  --background_main: #f6f7f8;
+  --card_color: #ffffff;
+  --lightgray_font: #a8a8a8;
+  --placeholder_color: #d1d1d1;
+  --lightblue_font: #29abe2;
+  --main_font: "Inter", sans-serif;
+  --backup_font: system-ui, sans-serif;
+}
 
 body {
     margin: 0;
