--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -61,6 +61,10 @@
   stroke: #29abe2;
 }
 
+.summary_headline_stroke_mobile {
+  display: none;
+}
+
 .summary_doings {
   display: flex;
   width: 560px;
@@ -303,18 +307,25 @@
   width: 385px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1350px) {
   .summary_greeting {
     display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .summary_container {
+    align-items: center;
   }
 
   .summary_headline {
     margin-left: 0;
     justify-content: center;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px; */
+    gap: 8px;
+    margin-left: -160px;
   }
 
   .summary_main_container {
@@ -324,12 +335,24 @@
 
   .join360 {
     font-size: 47px;
+    margin: 0;
+    margin-top: 28px;
   }
 
   .summary_headline_stroke {
+    display: none;
+  }
+
+  .summary_headline_stroke_mobile {
+    display: flex;
     width: 0;
     height: 90px;
+    stroke-width: 3px;
+    stroke: #29abe2;
+  
     transform: rotate(90deg);
+    margin-left: 40px;
+    margin-top: -40px;
   }
 
   .summary_headline_text {
@@ -373,6 +396,10 @@
     margin-left: 80px;
   }
 
+  .summary_urgent_field {
+    gap: 8px;
+  }
+
   .arrow_icon {
     width: 40px;
     height: 40px;
@@ -390,16 +417,78 @@
   .summary_tasks_field {
     width: 116px;
     height: 116px;
+    gap: 0;
   }
 
   .summary_tasks_text {
     font-size: 14px;
   }
+}
 
+@media (max-width: 420px) {
+
+  .summary_headline {
+    margin-left: -70px;
+  }
+
+  .summary_todo {
+    width: 130px;
+    height: 100px;
+    gap: 10px;
+}
+
+.summary_urgent_container {
+  width: 290px;
+  height: 100px;
+  margin-left: 134px;
+}
+
+.summary_tasks_field {
+  width: 90px;
+  height: 90px;
+}
+
+.summary_tasks {
+  gap: 10px;
+}
+
+.summary_date {
+  font-size: 14px;
+}
+
+.summary_urgent_text {
+  font-size: 12px;
+}
+
+.summary_number {
+  font-size: 40px;
+}
+
+.summary_tasks_text {
+  font-size: 12px;
+}
+
+.arrow_icon {
+  width: 36px;
+  height: 36px;
+}
+
+.summary_img_hook {
+  width: 36px;
+  height: 36px;
+}
+
+.summary_img {
+  width: 36px;
+  height: 36px;
+}
+
+.summary_doings {
+  height: 124px;
+}
 
 
 
 
 }
-
 
