--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -3,19 +3,19 @@
 
   <div class="sidebar_menu_container">
     <div class="sidebar_menu">
-      <img src="./assets/img/sidebar/summary.png" alt="Summary" />
+      <a href="./summary.html"><img src="./assets/img/sidebar/summary.png" alt="Summary" /></a>
       <a href="./summary.html">Summary</a>
     </div>
     <div class="sidebar_menu">
-      <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
+      <a href="./add_task.html"><img src="./assets/img/sidebar/addTask.png" alt="Add Task" /></a>
       <a href="./add_task.html">Add Task</a>
     </div>
     <div class="sidebar_menu">
-      <img src="./assets/img/sidebar/board.png" alt="Board" />
+      <a href="./board.html"><img src="./assets/img/sidebar/board.png" alt="Board" /></a>
       <a href="./board.html">Board</a>
     </div>
     <div class="sidebar_menu">
-      <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
+      <a href="./contacts.html"><img src="./assets/img/sidebar/contacts.png" alt="Contacts" /></a>
       <a href="./contacts.html">Contacts</a>
     </div>
   </div>
