--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="sidebar_footer_link">
-    <a href="#">Privacy Policy</a>
-    <a href="#">Legal notice</a>
+    <a href="./privacy_policy.html">Privacy Policy</a>
+    <a href="./legal_notice.html">Legal notice</a>
   </div>
 </section>
