--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -294,6 +294,42 @@ h1 {
     min-height: 90px;
 }
 
+#input_assigned_content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 8px;
+    background-color: grey;
+    max-height: 100px;
+    overflow-y: auto;
+    padding: 8px 0px;
+}
+
+#input_assigned_content div {
+    width: 16%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 16px;
+}
+
+.assign_input_container {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 16px;
+}
+
+.assign_input_container input {
+    border: none;
+    width: 100%;
+}
+
+.assign_input_container span {
+    height: 100%;
+    margin-right: 24px;
+}
+
 @media(max-width: 1350px) {
     .form_content {
         flex-direction: column;
