--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -135,6 +135,12 @@
     font-size: 20px;
 }
 
+.contact_scrolls_card_small_name {
+    color: #000000;
+    font-weight: 400;
+    font-size: 20px;
+}
+
 .contact_scrolls_card_small_onclick_email {
     color: #007CEE;
     font-weight: 400;
@@ -150,6 +156,11 @@
 
 
 /*Right side */
+
+.contacts_right_side_flex {
+    display: flex;
+    flex-direction: column;
+}
 
 .contacts_headline {
     display: flex;
@@ -172,4 +183,94 @@
     font-weight: 400;
     font-size: 27px;
     color: #2A3647;
+}
+
+.contacts_bigcard_container {
+    display: flex;
+    flex-direction: column;
+    width: 461px;
+    height: 364px;
+    margin-top: 60px;
+    margin-left: 50px;
+}
+
+.contacts_bigcard_contact_area {
+    display: flex;
+    align-items: center;
+    gap: 54px;
+}
+
+.contacts_bigcard_img {
+    width: 120px;
+    height: 120px;
+}
+
+.contacts_bigcard_name_area {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.contacts_bigcard_name {
+    font-size: 47px;
+    font-weight: 500;
+}
+
+.contacts_bigcard_edit {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+}
+
+.edit_area {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+}
+
+.edit_area_img {
+    width: 24px;
+    height: 24px;
+}
+
+.edit_text {
+    color: var(--Version-2-main-color, #2A3647);
+
+    /* Version 2/body */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 19.2px */
+}
+
+.contacts_bigcard_Information_text {
+    margin-top: 32px;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 32px;
+}
+
+.contacts_bigcard_Information_email_phone {
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+
+.contacts_bigcard_Information_email_phone_span {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.contacts_bigcard_Information_email {
+    color: #007CEE;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.contacts_bigcard_Information_phone {
+    color: #000000;
+    font-size: 16px;
+    font-weight: 400;
 }
