--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -35,7 +35,8 @@ body {
   padding: 60px 122px 0 77px;
 }
 
-.sign_up_container {
+.sign_up_container,
+.sign_up_container_mobile {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +44,8 @@ body {
   gap: 35px;
 }
 
-.sign_up_container_btn {
+.sign_up_container_btn,
+.sign_up_container_btn_mobile {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,11 +61,19 @@ body {
   border: solid 1px var(--main_color);
 }
 
-.sign_up_container_btn:hover {
+.sign_up_container_btn:hover,
+.sign_up_container_btn_mobile:hover {
   cursor: pointer;
   border: var(--lightblue_font);
   background-color: var(--lightblue_font);
   box-shadow: -1px 5px 5px 0px #c2c2c2;
+}
+
+/********** SIGNUP MOBILE **********/
+
+.sign_up_mobile {
+  display: none;
+  margin-top: 120px;
 }
 
 /********** MAIN **********/
@@ -115,6 +125,7 @@ body {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  width: 100%;
   height: 152px;
   gap: 32px;
 }
@@ -138,6 +149,8 @@ body {
 }
 
 .login_input input::placeholder {
+  font-size: 20px;
+  color: var(--placeholder_color);
   transform: translateY(5px);
 }
 
@@ -152,11 +165,6 @@ body {
 
 .login_input input:focus::placeholder {
   color: transparent;
-}
-
-.login_input input::placeholder {
-  font-size: 20px;
-  color: var(--placeholder_color);
 }
 
 .login_input div {
@@ -198,7 +206,7 @@ body {
 /* loginFoot */
 .login_card_foot {
   display: flex;
-  width: 322px;
+  width: 300px;
   height: 48px;
   gap: 35px;
 }
@@ -209,7 +217,6 @@ body {
   align-items: center;
   width: 110px;
   height: 48px;
-  padding: 15px, 24px, 15px, 24px;
   border-radius: 8px;
   text-decoration: none;
   font-size: 21px;
@@ -233,7 +240,6 @@ body {
   align-items: center;
   width: 177px;
   height: 48px;
-  padding: 15px, 24px, 15px, 24px;
   border-radius: 8px;
   text-decoration: none;
   font-size: 21px;
@@ -461,3 +467,30 @@ body {
   color: var(--lightblue_font);
   font-weight: bold;
 }
+
+/********** MEDIA QUERY **********/
+
+@media (max-width: 600px) {
+  .sign_up_container {
+    display: none;
+  }
+  .login_input {
+    width: auto;
+  }
+  .sign_up_mobile {
+    display: block;
+  }
+  .login_card {
+    height: 600px;
+    padding: 0;
+  }
+  .login_card_foot {
+    flex-direction: column;
+    align-items: center;
+  }
+  .foot_login_btn, 
+  .foot_guestlog_btn {
+    width: 180px;
+    height: 51px;
+  }
+}  
