--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -299,11 +299,15 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-top: 8px;
-    background-color: grey;
+    background-color: white;
     max-height: 100px;
     overflow-y: auto;
     padding: 8px 0px;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
+
+#assigned_input:focus {
+    outline: none;
 }
 
 #input_assigned_content div {
@@ -317,7 +321,12 @@ h1 {
     display: flex;
     align-items: center;
     background-color: white;
-    border-radius: 16px;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+.assign_input_container:focus-within {
+    border: 1px solid black;
 }
 
 .assign_input_container input {
@@ -327,7 +336,16 @@ h1 {
 
 .assign_input_container span {
     height: 100%;
-    margin-right: 24px;
+    margin-right: 8px;
+}
+
+.assign_input_container span img {
+    cursor: pointer;
+    transition: scale 75ms linear;
+}
+
+.assign_input_container span img:hover {
+    scale: 1.1;
 }
 
 @media(max-width: 1350px) {
