--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -12,17 +12,16 @@
 .contacts_body {
     display: flex;
     margin-left: 202px;
-    height: 928px;
+    height: 100vh;
 }
 
 .add_contact_scroll_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
     width: 456px;
-    height: 928px;
+    height: 100vh;
 }
 
 .add_new_contact_btn_caontainer {
@@ -75,7 +74,7 @@
     align-items: center;
     flex-direction: column;
     width: 400px;
-    height: 1188px;
+    height: 100vh;
     background-color: #FFFFFF;
     /* padding: 32px 24px 32px 24px; */
     margin-top: 101px;
@@ -236,7 +235,10 @@
     justify-content: flex-start;
     align-items: center;
     gap: 8px;
+    cursor: pointer;
 }
+
+
 
 .edit_area_img {
     width: 24px;
@@ -248,10 +250,14 @@
 
     /* Version 2/body */
     font-family: Inter;
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 19.2px */
+}
+
+.edit_text:hover {
+    color: #29ABE2;
 }
 
 .contacts_bigcard_Information_text {
@@ -276,12 +282,14 @@
     color: #007CEE;
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 
 .contacts_bigcard_Information_phone {
     color: #000000;
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 
 
