--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -17,7 +17,7 @@
 
 .summary_overview {
   display: flex;
-  width: 560px;
+  /* width: 560px; */
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -67,7 +67,7 @@
 
 .summary_doings {
   display: flex;
-  width: 560px;
+  /* width: 560px; */
   height: 168px;
   justify-content: center;
   align-items: flex-start;
@@ -228,7 +228,7 @@
 
 .summary_tasks {
   display: flex;
-  width: 560px;
+  /* width: 560px; */
   height: 170px;
   padding: 1px 0px;
   justify-content: center;
@@ -393,7 +393,7 @@
     gap: 20px;
     border-radius: 20px;
     margin-top: 0;
-    margin-left: 80px;
+    margin-left: 0;
   }
 
   .summary_urgent_field {
@@ -440,7 +440,7 @@
 .summary_urgent_container {
   width: 290px;
   height: 110px;
-  margin-left: 130px;
+  /* margin-left: 130px; */
 }
 
 .summary_tasks_field {
