--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -51,7 +51,6 @@
 .contacts_body {
   display: flex;
   margin-left: 202px;
-  /* height: 100vh; */
 }
 
 .add_contact_scroll_container {
@@ -81,7 +80,6 @@
   width: 352px;
   height: 56px;
   border-radius: 10px;
-  /* padding: 12px 0px 12px 0px; */
   gap: 16px;
   cursor: pointer;
   margin-right: 8px;
@@ -96,7 +94,6 @@
   color: #ffffff;
   width: 175px;
   height: 25px;
-  /* font-family: inter; */
   font-weight: 700;
   font-size: 21px;
   line-height: 25.2px;
@@ -115,9 +112,7 @@
   width: 400px;
   height: calc(100vh - 197px);
   background-color: #ffffff;
-  /* padding: 32px 24px 32px 24px; */
   margin-top: 101px;
-  /* max-height: 928px; */
   overflow-y: auto;
 }
 
@@ -249,13 +244,11 @@
 }
 
 .contacts_headline_h1 {
-  /* font-family: inter; */
   font-weight: 700;
   font-size: 61px;
 }
 
 .contacts_headline_text {
-  /* font-family: inter; */
   font-weight: 400;
   font-size: 27px;
   color: #2a3647;
@@ -361,13 +354,11 @@
 
 .edit_text {
   color: var(--Version-2-main-color, #2a3647);
-
-  /* Version 2/body */
   font-family: Inter;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 120%; /* 19.2px */
+  line-height: 120%;
 }
 
 .contacts_bigcard_Information_text {
@@ -410,16 +401,6 @@
   display: none !important;
 }
 
-/* .add_contact_overlay_bg {
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 9998;
-
-} */
-
 .add_contact_overlay {
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -439,7 +420,6 @@
   align-items: center;
   justify-content: flex-start;
   border-radius: 30px;
-  /* background-color: #FFFFFF; */
 }
 
 .contact_overlay_add_contact_card_left {
@@ -496,10 +476,6 @@
   width: 700px;
   height: 594px;
 }
-
-/* .contact_overlay_add_contact_card_right_close_div {
-    
-} */
 
 .contact_overlay_add_contact_card_right_close_x {
   display: flex;
@@ -574,7 +550,7 @@
   font-size: 20px;
   font-weight: 400;
   cursor: pointer;
-  border: none;
+  border: solid 2px;
 }
 
 .contact_overlay_add_contact_card_right_btn_cancel:hover {
@@ -627,7 +603,6 @@
         display: none;
     }
     .contacts_bigcard_container {
-        /* margin-left: 50px; */
         align-items: flex-start;
         width: fit-content;
     }
@@ -810,7 +785,6 @@
     background-image: url(../img/contacts/editMobilehover.png);
   }
 
-
   .contacts_headline {
     margin-top: 28px;
     margin-left: 16px;
@@ -863,7 +837,6 @@
     height: 100px;
     background-color: #ffffff;
     border-radius: 20px 20px 0px 20px;
-    /* display: none; */
   }
 
   .contacts_bigcard_Information_text {
@@ -985,8 +958,8 @@
     font-weight: 100;
     font-size: 16px;
   }
-}
-
-.contact_overlay_add_contact_card_right_btn_create {
-  margin-top: 14px;
+  
+  .contact_overlay_add_contact_card_right_btn_create {
+    margin-top: 14px;
+  }
 }
