--- a/assets/css/add_task_second.css
+++ b/assets/css/add_task_second.css
@@ -80,6 +80,10 @@
     display: flex;
     flex-direction: column;
   }
+
+  .sub_container {
+    min-width: 450px;
+  }
   
   @media (max-width: 1350px) {
     .form_content {
@@ -152,6 +156,9 @@
       padding: 0;
     }
     
+    .sub_container {
+      min-width: 0;
+    }
   }
   
   @media (max-width: 400px) {
