--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -210,35 +210,39 @@ h1 {
 }
 
 .card_headline img {
-    display: none;
-    width: 40px;
-    object-fit: contain;
-    cursor: pointer;
-    transform: rotate(90deg);
+  display: none;
+  width: 40px;
+  object-fit: contain;
+  cursor: pointer;
+  transform: rotate(90deg);
 }
 
 .card_setting_popup {
-    background-color: rgb(37, 37, 37);
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    color: #fff;
-    border-radius: 8px;
-    padding: 4px 8px;
-    gap: 4px;
-    transition: color 80ms ease-in;
+  background-color: rgb(37, 37, 37);
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  border-radius: 8px;
+  padding: 4px 8px;
+  gap: 4px;
+  transition: color 80ms ease-in;
 }
 
 .card_setting_popup a:hover {
-    color: orange;
+  color: orange;
 }
 
 .card_description {
   color: rgb(168, 168, 168);
+  max-height: 55px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  max-height: 50px;
+  text-overflow: ellipsis;
 }
 
 .card_subtasks progress {
@@ -372,22 +376,22 @@ h1 {
 }
 
 .button_container_edit img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .button_container_edit button {
-    border: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 4px;
-    background-color: rgb(42,54,71);
-    border-radius: 8px;
-    font-size: 24px;
-    color: white;
-    cursor: pointer;
-    transition: background-color 80ms linear;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  background-color: rgb(42, 54, 71);
+  border-radius: 8px;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 80ms linear;
 }
 
 .button_container_edit button:hover {
-    background-color: rgb(41, 171, 226);
+  background-color: rgb(41, 171, 226);
 }
