--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -342,3 +342,18 @@ h1 {
   height: 90px;
   min-height: 90px;
 }
+
+.contact_list {
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: white;
+  max-height: 100px;
+  overflow-y: auto;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+  list-style-type: none;
+  scrollbar-width: thin;
+  border-radius: 10px;
+}
