--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -302,7 +302,7 @@ h1 {
 
 .input_edit {
   width: 100%;
-  display: flex;
+  display: inline-table;
   padding: 8px 21px;
   align-items: center;
   gap: 10px;
@@ -356,10 +356,10 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  background-color: white;
   max-height: 100px;
   overflow-y: auto;
   padding: 8px 0px;
+  padding-left: 8px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
 }
 
