--- a/assets/templates/add_task/add_task_template.css
+++ b/assets/templates/add_task/add_task_template.css
@@ -303,3 +303,18 @@ h1 {
 .icon:hover {
     scale: 1.1;
 }
+
+.contact_list {
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    background-color: white;
+    max-height: 100px;
+    overflow-y: auto;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+    list-style-type: none;
+    scrollbar-width: thin;
+    border-radius: 10px;
+  }
